objects/Investment__c.object
<CustomObject>
    <description>used to capture investment made by MathWorks through the various academic support programs.</description>
    <fields>
        <fullName>Academic_Support_Project__c</fullName>
        <description>used to relate investment records to Academic Support parent records.</description>
        <label>Academic Support Project</label>
        <referenceTo>Academic_Support_Project__c</referenceTo>
        <relationshipLabel>Investments</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Used to define the type of activity a MathWorks staff resource is engaged in for an event</description>
        <inlineHelpText>Used to define the type of activity a MathWorks staff resource is engaged in for an event</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program Management</fullName>
                </value>
                <value>
                    <fullName>License Management/Set-up</fullName>
                </value>
                <value>
                    <fullName>Legal Contract Management</fullName>
                </value>
                <value>
                    <fullName>Event/Logistics Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Capture a brief note about the project investment</description>
        <inlineHelpText>Capture a brief note about the project investment</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>Enter the name of the course offered</description>
        <inlineHelpText>Enter the name of the course offered</inlineHelpText>
        <label>Course</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Investment__c</fullName>
        <description>Used to capture the date the investment was made</description>
        <inlineHelpText>Used to capture the date the investment was made</inlineHelpText>
        <label>Date of Investment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverable_Type__c</fullName>
        <label>Deliverable Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Courseware</fullName>
                </value>
                <value>
                    <fullName>CR Link</fullName>
                </value>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
                <value>
                    <fullName>User Story</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Reflects the department of the related MathWorker</description>
        <formula>MathWorker__r.Department</formula>
        <inlineHelpText>Reflects the department of the related MathWorkers contact record</inlineHelpText>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <label>Hardware</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Captures the number of hours spent by a MathWorker on an event</description>
        <inlineHelpText>Captures the number of hours spent by a MathWorker on an event</inlineHelpText>
        <label>Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Link__c</fullName>
        <description>This opens up the License details in ORC application.</description>
        <formula>IF(NOT(ISBLANK(License_Number__c )),HYPERLINK(&quot;http://inside-apps.mathworks.com/orclookups/licenseDetails.do?licenseId=&quot;&amp;License_Number__c,&quot;Open License Details&quot;),&quot;&quot;)</formula>
        <inlineHelpText>This opens up the License details in ORC application.</inlineHelpText>
        <label>License Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <description>capture the license number</description>
        <inlineHelpText>Enter the license number</inlineHelpText>
        <label>License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>Used to denote the type of license being awarded</description>
        <inlineHelpText>Used to denote the type of license being awarded</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License A</fullName>
                </value>
                <value>
                    <fullName>License B</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Concurrent</fullName>
                </value>
                <value>
                    <fullName>Student Version</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MathWorker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact, filtered on is employee flag, to easily allow a contact to be associated with the investment record.</description>
        <inlineHelpText>Use to select a MathWorkers contact record</inlineHelpText>
        <label>MathWorker</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The contact you are searching for is not an employee or is not currently in Salesforce.</errorMessage>
            <filterItems>
                <field>Contact.Employee_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please note that this lookup is filtered to return only contacts in Salesforce that are identified as MathWorks employees.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Investments</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>Used to capture the amount of a payment made as part of a monetary award</description>
        <inlineHelpText>Used to capture the amount of a payment made as part of a monetary award</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>used to capture the quantity of student version software awarded</description>
        <inlineHelpText>Enter the quantity of licenses awarded (specific to Student Version)</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Used to identify the role a MathWorker played during an event</description>
        <inlineHelpText>Used to identify the role a MathWorker played during an event</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Marketing</fullName>
                </value>
                <value>
                    <fullName>Internal Sponsor</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Sales rep</fullName>
                </value>
                <value>
                    <fullName>Technical Lead</fullName>
                </value>
                <value>
                    <fullName>Technical Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Investment</label>
    <nameField>
        <displayFormat>IN-{0000000}</displayFormat>
        <label>Investment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <recordTypes>
        <fullName>Deliverable</fullName>
        <active>true</active>
        <description>This will be used by TEs to capture deliverables for Curriculum Development projects</description>
        <label>Deliverable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hardware</fullName>
        <active>true</active>
        <description>This is to enter the Hardware details</description>
        <label>Hardware</label>
    </recordTypes>
    <recordTypes>
        <fullName>License</fullName>
        <active>true</active>
        <description>Used to capture information about different license types given in relation to an Academic Support project</description>
        <label>License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monetary</fullName>
        <active>true</active>
        <description>Used to capture information about a Monetary investment</description>
        <label>Monetary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Resource</fullName>
        <active>true</active>
        <description>Used to track high level time invested by a MathWorks staff resource</description>
        <label>Staff Resource</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <description>Used to track investment in training as part of an Academic Support project</description>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Year</fullName>
        <active>true</active>
        <description>Used to capture Year information</description>
        <label>Year</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>